--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Lain</title>
+    <title>Saint</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=0.7, minimal-ui, viewport-fit=cover, width=device-width">
     <meta name="theme-color" content="#000001">
@@ -123,7 +123,7 @@
     <h1>saint</h1> <h2>serving over 60+ servers and  30k+ users</h2>
     <div class="redirects">
         <ul class="horz-list">
-            <li><a href="https://discord.gg/okay">Support</a></li>
+            <li><a href="https://discord.gg/gospel">Support</a></li>
             <li><a href="https://lains.win/commands">Commands</a></li>
             <li><a href="https://docs.lains.win">Documents</a></li>
             <li><a href="https://lains.win/features">Features</a></li>
