--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
     <div class="redirects">
         <ul class="horz-list">
             <li><a href="https://discord.gg/gospel">Support</a></li>
-            <li><a href="https://lains.win/commands">Commands</a></li>
-            <li><a href="https://docs.lains.win">Documents</a></li>
-            <li><a href="https://lains.win/features">Features</a></li>
-
+            <li><a href="https://gg.gg/1awe4o">Commands</a></li>
         </ul>
     </div>
 </body>
