--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="initial-scale=0.7, minimal-ui, viewport-fit=cover, width=device-width">
     <meta name="theme-color" content="#000001">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="lains.win">
-    <meta property="og:title" content="Lain Bot">
+    <meta property="og:site_name" content="web @sademoskibidi bot @tokenphish">
+    <meta property="og:title" content="Saint Bot">
     <meta property="og:color" content="#000001">
     <meta property="og:image"
-        content="https://cdn.discordapp.com/attachments/1238661510587351161/1239420617271541862/avatar.png?ex=6642dbe6&is=66418a66&hm=7151406e666629009747d3e25f11802020fbe710b900c75d8e04c7918379c5b1&">
+        content="">
     <meta property="og:url" content="https://lains.win">
     <meta property="og:description" content="A free auto-posting bot with administrative features">
 
